--- a/product.css
+++ b/product.css
@@ -151,7 +151,7 @@ h2 {
   min-height: auto;
   max-width: 794px;
   max-height: auto;
-  border: 2px solid grey;
+  /* border: 2px solid grey; */
   /* display: grid;
   align-items: center; */
 }
@@ -295,7 +295,7 @@ a {
   min-width: 270px;
   min-height: auto;
   max-width: 794px;
-  border: 2px solid pink;
+  /* border: 2px solid pink; */
 }
 
 .carrousel-container {
@@ -304,7 +304,7 @@ a {
   min-height: auto;
   max-width: 794px;
   max-height: auto;
-  border: 2px solid grey;
+  /* border: 2px solid grey; */
 }
 
 .images-container {
@@ -331,27 +331,31 @@ a {
   margin-top: -50%;
 }
 
+/* arrows */
 .prev,
 .next {
   cursor: pointer;
   position: relative;
   /* top: 40%; */
   width: auto;
-  padding: 16px;
+  /* padding: 16px; */
+  padding: 0.6em 1em;
   /* margin-top: -50px; */
   color: white;
   font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
+  /* font-size: 20px; */
+  font-size: 1rem;
+  /* border-radius: 0 3px 3px 0; */
+  border-radius: 50%;
   user-select: none;
   -webkit-user-select: none;
   background-color: #e79b99;
 }
 
-.next {
+/* .next {
   right: 0;
   border-radius: 3px 0 0 3px;
-}
+} */
 
 .prev:hover,
 .next:hover {
