--- a/product.css
+++ b/product.css
@@ -89,6 +89,7 @@ header img {
 .cart-div {
   display: grid;
   place-items: center;
+  justify-content: start;
 }
 
 nav img {
@@ -106,6 +107,7 @@ h2 {
 
 h1 {
   font-size: 2rem;
+  margin: 0;
 }
 
 main {
@@ -403,6 +405,10 @@ a {
   .submit-button {
     margin-left: 0;
   }
+
+  h1 {
+    margin-top: 1em;
+  }
 }
 
 @media only screen and (min-width: 601px) and (max-width: 913px) {
@@ -417,6 +423,10 @@ a {
 
   .product-info {
     margin-left: 0;
+  }
+
+  h1 {
+    margin-top: 1em;
   }
 }
 
