--- a/product.css
+++ b/product.css
@@ -25,9 +25,9 @@ header {
   background-image: url("./img/header/header-background.png");
   background-size: contain;
   background-color: white;
-  position: fixed;
+  /* position: fixed;
   top: 0;
-  z-index: 10;
+  z-index: 10; */
 }
 
 .logo-div {
@@ -56,6 +56,7 @@ header img {
 #nav-bar {
   position: sticky;
   top: 0;
+  z-index: 10;
   width: 100%;
   display: grid;
   grid-template-columns: 5% 90% 5%;
@@ -114,7 +115,7 @@ main {
   position: relative;
   max-width: 85vw;
   top: 0;
-  padding-top: 200px;
+  /* padding-top: 200px; */
   margin-bottom: 5%;
   z-index: 0;
 }
