Added: dropdowns navbar, about background color

--- a/product.css
+++ b/product.css
@@ -8,6 +8,7 @@
 * {
   font-family: "Quicksand", sans-serif;
   font-size: 1.05rem;
+  color: #291901;
 }
 
 /* header */
@@ -71,25 +72,78 @@ header img {
 
 .nav-bar-links {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   align-content: center;
   flex-wrap: wrap;
   flex-direction: row;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .nav-link {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   text-decoration: none;
   font-weight: 400;
   color: white;
   font-weight: 500;
-  padding: 2em;
+  padding: 1em 1em 0.5em 1em;
+  position: relative;
 }
 
+/* underline animation from: https://www.30secondsofcode.org/css/s/hover-underline-animation */
+
+.nav-link:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.nav-link:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.dropdown-content {
+  display: none;
+  width: max-content;
+  height: max-content;
+  margin-bottom: 1em;
+  padding: 0.5em 1em;
+}
+
+.nav-bar-links:hover .dropdown-content {
+  display: block;
+}
+
+#nav-bar ul {
+  list-style-type: none;
+  padding-inline-start: 0;
+}
+
+#nav-bar li a {
+  text-decoration: none;
+  color: white;
+}
+
+.dropdown-content li a,
+.dropdown-content p {
+  font-size: 1rem;
+}
+
+/* shopping cart icon */
 .cart-div {
+  margin-top: 0.9em;
+  margin-bottom: 0.9em;
   display: grid;
-  place-items: center;
+  place-items: start;
   justify-content: start;
 }
 
@@ -175,6 +229,7 @@ h2 {
 
 .add-to-cart-button:hover {
   background-color: var(--orange);
+  color: white;
 }
 
 .product-info a {
@@ -259,6 +314,17 @@ h2 {
   opacity: 1;
 }
 
+.about {
+  margin-top: 3em;
+  background-color: var(--orange);
+  padding: 1em 2em;
+  border-radius: 0.5em;
+}
+
+.about h2 {
+  margin-top: 1em;
+}
+
 #about-div {
   width: 100%;
 }
@@ -282,6 +348,18 @@ h2 {
 }
 
 /* description and more information section */
+
+#description-div {
+  margin-top: 3em;
+}
+
+#customization-div {
+  margin-top: 3em;
+}
+
+#shipping-div {
+  margin-top: 3em;
+}
 
 form p {
   margin-block-end: 0;
@@ -308,6 +386,7 @@ input[type="email"] {
 
 .submit-button:hover {
   background-color: #ee918d;
+  color: white;
 }
 
 /* footer */
