--- a/product.css
+++ b/product.css
@@ -321,6 +321,19 @@ h2 {
   border-radius: 0.5em;
 }
 
+.about-title-div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.about-title-div img {
+  width: 40px;
+  height: 40px;
+  aspect-ratio: 1/1;
+  margin-right: 0.5em;
+}
+
 .about h2 {
   margin-top: 1em;
 }
@@ -432,6 +445,14 @@ a {
     max-width: 90vw;
   }
 
+  header img {
+    width: 100px;
+  }
+
+  .logo-text {
+    font-size: 1.7rem;
+  }
+
   #nav-bar {
     display: grid;
     grid-template-columns: 10% 80% 10%;
@@ -476,8 +497,9 @@ a {
     margin: 1em;
   }
   .about {
-    margin: 1em;
+    /* margin: 1em; */
   }
+
   .input-and-button {
     flex-direction: column;
     align-items: stretch;
