--- a/product.css
+++ b/product.css
@@ -214,6 +214,11 @@ h2 {
   font-weight: 500;
 }
 
+.add-to-cart-form-div {
+  margin-bottom: 1em;
+}
+
+/* add to cart button */
 .add-to-cart-button,
 .submit-button {
   width: 100%;
@@ -363,15 +368,15 @@ h2 {
 /* description and more information section */
 
 #description-div {
-  margin-top: 3em;
+  margin-top: 4em;
 }
 
-#customization-div {
+/* #customization-div {
   margin-top: 3em;
-}
+} */
 
 #shipping-div {
-  margin-top: 3em;
+  margin-top: 1em;
 }
 
 form p {
